tests/NormalTests/paczka1/fuzzy1/75161968.err
Error in line 2: D59sIH S136 41,84
Error in line 12: KtjmLZNyP6 A530 85,3
Error in line 30: D59sIH S136 7,3
